# HackBrowserDataPython

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_SECURITY.md  SECURITY.md  pyproject.toml  requirements.txt
hackbrowserdata/: __init__.py  __main__.py  hack_browser_data.py
hackbrowserdata/browsers/: __init__.py  browser_impl.py  browser_paths.py
hackbrowserdata/core/: browser_data.py  browser_manager.py  logger.py  types.py
hackbrowserdata/extractors/: __init__.py  chromium_extractors.py  firefox_extractors.py
hackbrowserdata/utils/: crypto_utils.py  file_utils.py
